# configai

./: .gitignore  Cargo.toml  Dockerfile  README.md  design.md  llms-full.txt  llms.txt  start.sh
.github/workflows/: docker.yml
src/: error.rs  main.rs  models.rs
src/api/: auth.rs  handlers.rs  mod.rs  routes.rs
src/core/: api_key.rs  config.rs  env.rs  mod.rs  project.rs  shared.rs
src/storage/: dir.rs  file.rs  mod.rs
src/tui/: app.rs
