[package]
name = "config-center"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = "0.3"
thiserror = "2"
ratatui = "0.29"
crossterm = "0.28"

[dev-dependencies]
proptest = "1"
tempfile = "3"
